syntax = "proto3";

option go_package = "proto/database-gen";

package database;

message GetUserByIdRequest {
  int64 id = 1;
}

message InsertUserRequest {
  string email = 1;
  string password_hash = 2;
  string full_name = 3;
}

message GetUserByEmailRequest {
  string email = 1;
}