syntax = "proto3";

option go_package = "proto/database-gen";

package database;

message User {
  int64 id = 1;
  string email = 2;
  string password_hash = 3;
  string full_name = 4;
  string profile_picture_url = 5;
}